kubernetes/n8n-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: n8n
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n
    spec:
      containers:
        - command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          image: aoaiaiplayground.azurecr.io/axpg/n8n:latest
          name: n8n
          ports:
            - containerPort: 5678
          resources:
            requests:
              memory: "640Mi"
              cpu: "200m"
            limits:
              memory: "1280Mi"
              cpu: "800m"
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-claim0
      restartPolicy: Always
      volumes:
        - name: n8n-claim0
          persistentVolumeClaim:
            claimName: n8n-claim0
        - name: n8n-secret
          secret:
            secretName: n8n-secret
        # - name: postgres-secret
        #   secret:
        #     secretName: postgres-secret
