kubernetes/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: n8n
  name: n8n
  namespace: n8n
spec:
  # type: ClusterIP
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 5678
      protocol: TCP
  selector:
    service: n8n
