kubernetes/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
  annotations:
    appgw.ingress.kubernetes.io/use-private-ip: "true"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway
  # tls:
  #   - hosts:
  #       - n8n-dev.aipg.lgcns.com
  #     secretName: cert-aoai-kc-axpg-01
  rules:
    - host: n8n-dev.aipg.lgcns.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678 # ← Service의 외부 포트 (port), not targetPort
